Various changes to gapless functionality to strengthen the logic, fixed cases where next song would start before original song finished. Added styling to play buttons on cards.

--- a/data/style.css
+++ b/data/style.css
@@ -223,6 +223,10 @@
     background-color: alpha(@accent_color, 0.22);
 }
 
+.playing-card .card-play-overlay image {
+    color: @accent_color;
+}
+
 .draggable-box row.drop-target-above {
   border-top: 2px solid var(--accent-color);
 }
